# bardagent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README_HF.md  app.py  eval_result.json  gaia_results.json  gaia_runner.py  hf_app.py  main.py  pyproject.toml  requirements.txt  results.txt  test.local.txt
.gemini/: settings.json
.streamlit/: config.toml
UI/: Evals.py  Home.py
core/: __init__.py  agent.py
evals/: dataset.jsonl  dataset1.jsonl  run_eval.py
tools/: __init__.py  action_tool.py  info_tools.py  multimodal_tools.py  search.py  web_fetch.py
utilities/: answer_extractor.py  history.py  logger.py  prompts.py  utils.py
